# Lumina-Layers

./: .gitignore  AGENTS.md  CHANGELOG.md  CHANGELOG_CN.md  CLAUDE.md  Dockerfile  OPTIMIZATION_LOG.md  README.md  README_CN.md  analyze_colors.py  api_server.py  bambu_config_template.json  benchmark.py  check_stack_to_color.py  config.py  inspect_3mf_filaments.py  inspect_3mf_materials.py  lumina_studio.spec  main.py  my_filament.json  pyproject.toml  pytest.ini  query_stack_color.py  requirements-test.txt  requirements.txt  split_image.py  start_dev.bat  start_dev.py  test_hue_matching.py  test_ui_hue_integration.py
.github/: dependabot.yml
.sisyphus/: boulder.json
agnets/: example-01-enum.md  example-02-single-responsibility.md  example-03-ui-static-assets.md  example-04-core-i18n.md  example-05-module-organization.md  example-06-dataclass-request.md  example-07-extract-duplicate-logic.md  example-08-import-order.md
api/: app.py  dependencies.py  file_bridge.py  file_registry.py  session_store.py  worker_pool.py
assets/: smart_8color_stacks.npy  temp_5c_ext_page_1.npy  temp_5c_ext_page_2.npy
core/: __init__.py  calibration.py  color_analyzer.py  color_matchers.py  color_matching_hue_aware.py  color_matching_hybrid.py  color_merger.py  color_replacement.py  converter.py  extractor.py  five_color_combination.py  geometry_utils.py  heightmap_loader.py  i18n.py  image_preprocessor.py  image_processing.py  isolated_pixel_cleanup.py  lut_merger.py  mesh_generators.py  naming.py  pipeline.py  slicer.py  tray.py  ui_detection.py  ui_status.py  vector_engine.py
(+521 files in other folders)
